# AETHER-AI.io

./: .dockerignore  .env.example  .env.template  .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  Makefile  README.md  START_HERE.md  aetherai.bat  app.js  docker-compose.yml  docker-manage.bat  docker-quickstart.bat  docker-verify.bat  docs.html  implementation_summary.md  index.html  launch_website.bat  package-lock.json  package.json  pyproject.toml  requirements.txt  serve_website.py  setup.cfg  styles.css  vercel.json  verify_features.py
.agent/: feature-suggestions.md  rules.md
.github/ISSUE_TEMPLATE/: feature_request.md  security_issue.md
.github/workflows/: ci.yml  docker-build-test.yml  docker-publish.yml
aetherai/: __init__.py
aetherai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: mkdocs.yml
docs/architecture/: API_SPECIFICATIONS.md  IMPLEMENTATION_GUIDE.md  MICROSERVICES_REFACTOR_PLAN.md  README.md
docs/docs/: advanced-features.md  developer-guide.md  getting-started.md  index.md  reference.md
docs/site/: 404.html  index.html  sitemap.xml
documentation-site/: README.md  mkdocs.yml
documentation-site/docs/: advanced-features.md  commands.md  developer-guide.md  getting-started.md  models.md  security.md  tasks.md
extension/: README.md  package-lock.json  package.json  tsconfig.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
scripts/: DockerTroubleshoot.md  check_docker.bat  check_docker.ps1
terminal/: .env.example  Dockerfile  README.md  SECURITY.md  __init__.py  advanced_features.py  advanced_security.py  analytics.py  analytics_monitor.py  api_client.py  blockchain.py  cli_test_runner.py  cloud_integration.py  code_review_assistant.py  context_aware_ai.py  creative_tools.py  dashboard.py  dashboard_tui.py  database_manager.py  diagnose_ollama.py  docker_manager.py  file_watcher.py  games_learning.py  games_tui.py  high_priority_commands.py  history.py  install.bat  install.sh  install_advanced.bat  install_linux.sh  install_mac.sh  install_minimal.bat  integration_hub.py  main.py  ml_ops.py  network_tools.py  package_manager_integration.py  persona_manager.py  plugin_manager.py  rag.py  (+8 more)
(+71 files in other folders)
